--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,21 +1,12 @@
 ---
-layout: compress
+layout: default
 ---
-
-<!DOCTYPE html>
-<html lang="pt-br">
-  	{% include head.html %}
-    <body>
-    	{% include svg-icons.html %}
-		<header class="page-header">
-			<h1 class="post-title">{{ page.title }}</h1>
-			{% include menu-search.html %}
-		</header>
-        <main>
-		    {{ content }}
-		</main>
-        {% include footer.html %}
-        {% include scripts.html %}
-		
-    </body>
-</html>
+<article class="post">
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+    <hr />
+  </header>
+  <div class="post-content">
+    {{ content }}
+  </div>
+</article>
